# Kiriko

./: .gitignore  README.md  pyproject.toml
Kiriko/: main.py
Kiriko/Core/: Kiriko.py
Kiriko/Core/Cogs/: Ping.py  _template.py
